# slider_puzzle

./: .gitignore  CMakeLists.txt  NineSolver.cpp  NineSolver.h  NumSolver.h  basic_pos.h  board.cpp  board.h  board_api.cpp  board_api.h  boardgen.cpp  boardgen.h  boardgraph.cpp  boardgraph.h  boardrotator.cpp  boardrotator.h  boardscene.cpp  boardscene.h  boolmatrix.h  debug_output.cpp  debug_output.h  dijkstra.h  edgegraph.h  gamewindow.cpp  gamewindow.h  graph.h  graphicsview.cpp  graphicsview.h  linemover.cpp  linemover.h  main.cpp  matrix.cpp  matrix.h  matrixgraph.cpp  matrixgraph.h  movedirection.h  movelist.cpp  movelist.h  moverparam.cpp  moverparam.h  (+29 more)
